Remove main page tagline (not needed), and remove the middot if there is no tagline

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink:        pretty
 # Setup
 title: Ian Glen Neal
 email: ian.gl.neal@gmail.com
-tagline: 'A Jekyll theme'
+tagline: ''
 description: >-
   Future PhD candidate Computer Science, with a focus in Systems and Computer
   Architecture.
