Messing with the sidebar to add document links

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ baseurl: '/'
 twitter_username: iangneal
 github_username: dahca
 linkedin_username: ianglenneal
+stackoverflow_username: 7869944
 google_plus_username:
 facebook_username:
 dribbble_username:
