Add Medium, reorder some stuff

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ baseurl: /
 
 # Social media accounts
 twitter_username: iangneal
-github_username: dahca
+medium_username: iangneal
+github_username: Dahca
 linkedin_username: ianglenneal
 stackoverflow_username: 7869944
 google_plus_username:
