Update, remove blog for now

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ian Glen Neal
 email: ian.gl.neal@gmail.com
 tagline: ''
 description: >-
-  Future PhD candidate Computer Science, with a focus in Software Systems and
+  PhD Pre-Candidate Computer Science with a focus in Software Systems and
   Computer Architecture.
 url: 'about.iangneal.io'
 baseurl: /
@@ -34,7 +34,7 @@ dribbble_username:
 
 # Various emails
 gmail_address: ian.gl.neal@gmail.com
-utexas_address: ian.glen.neal@utexas.edu
+school_address: iangneal@umich.edu
 
 
 # Atom.xml -- RSS feed
