Updating profile, contact, publications

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ian Glen Neal
 email: ian.gl.neal@gmail.com
 tagline: ''
 description: >-
-  PhD Pre-Candidate Computer Science with a focus in Software Systems and
+  PhD Pre-Candidate in Computer Science with a focus in Systems and
   Computer Architecture.
 url: 'about.iangneal.io'
 baseurl: /
