Finally got some custom includes to work

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,26 @@
-Adams:
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+Weisse:
+    url: https://www.ofirweisse.com/
 
-Podolsky:
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+Kasikci:
+    url: https://web.eecs.umich.edu/~barisk/
 
-Rosen:
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+Loughlin:
+    url: https://www.kevinloughlin.org/
+
+Wenisch:
+    url: https://web.eecs.umich.edu/~twenisch/
+
+Kwon:
+    url: https://sites.google.com/view/yjkwon/home
+
+Peter:
+    url: https://www.cs.utexas.edu/~simon/
+
+Quinn:
+    url: https://web.eecs.umich.edu/~arquinn/
+
+Stoler:
+    url: https://www.linkedin.com/in/benstoler/
+
+Reeves: 
+    url: https://www.linkedin.com/in/ben-reeves/
