--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,9 @@ scholar:
   details_layout: bibtex.html
   details_link: Details
 
+  sort_by: year, month
+  order: descending
+
   query: "@*"
 
 # -----------------------------------------------------------------------------
