--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -24,3 +24,18 @@ Stoler:
 
 Reeves: 
     url: https://www.linkedin.com/in/ben-reeves/
+
+Witchel:
+    url: https://www.cs.utexas.edu/users/witchel/
+
+Chidambaram:
+    url: https://www.cs.utexas.edu/~vijay/
+
+Zhu:
+    url: https://www.cs.utexas.edu/~zhitingz/
+
+Hu:
+    url: https://www.cs.utexas.edu/~yige/
+
+Cheng:
+    url: https://tycheng.github.io/
