Add more coauthor information

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -39,3 +39,18 @@ Hu:
 
 Cheng:
     url: https://tycheng.github.io/
+
+Khan:
+    url: https://web.eecs.umich.edu/~takh/
+
+Zuo:
+    url: https://web.eecs.umich.edu/~gefeizuo/
+
+Ma:
+    url: https://jcma.me/
+
+Narayanasamy:
+    url: https://web.eecs.umich.edu/~nsatish/
+
+Tsai:
+    url: https://github.com/eltsai
