Add preprint for Hippocrates
- Also remove medium for now

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # keybase_username: # your keybase user name
 
 twitter_username: iangneal
-medium_username: iangneal
+# medium_username: iangneal
 github_username: Dahca
 linkedin_username: ianglenneal
 scholar_userid: U9fyow8AAAAJ # your Google Scholar ID
