Update papers from OSDI'21

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -54,3 +54,12 @@ Narayanasamy:
 
 Tsai:
     url: https://github.com/eltsai
+
+Pokam:
+    url: https://sites.google.com/site/gillespokam/home
+
+Mozafari:
+    url: https://web.eecs.umich.edu/~mozafari/
+
+Shiple:
+    url: https://www.usenix.org/conference/fast21/speaker-or-organizer/eric-shiple-university-michigan
